Fixed problem with saving to the db, it had to do with length of strings and our NVARCHAR being 50 for game name as well as descriptions being too long. Potentially going to forego storing those since it takes so long to hit the API anyway if we get it for all of them. Also adjusted UP for Game to have a bigger char count for name.

--- a/src/SteamProject/wwwroot/css/site.css
+++ b/src/SteamProject/wwwroot/css/site.css
@@ -26,11 +26,3 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
-
-.scroll {
-  overflow-y: auto;
-  height: 200px;
-  padding-right: 30px;
-  display: inline-block;
-  text-align: bottom;
-}
